resources/assets/sass/component/mixer.sass
.mixer
    +e( a-100-fb, a-fb-r, a-fb-jsa, m-c )
    width: 100vw
    grid-area: b
    +desktop
        width: 95vw
.mixer input
    width: 10px
    height: 200px
    -webkit-appearance: slider-vertical
    margin-right: 20px

.mixer-container
    +e(a-90-fb, a-fb-r, a-null-cent, a-fb-jsa, a-fb-ac)

.mixer-input-container
    +e( a-33-fb, a-fb-c, a-fb-jsa, a-fb-ac, ta-c )
    color: $black
    font-size: 0.5em
    +desktop
        font-size: 1em
    &:hover
        background-color: lighten( $dark_black, 20% )
        color: $white

.vertical-slider
    width: 10px
    background: $color1
    -webkit-appearance: slider-vertical

